@@ -2,8 +2,10 @@ git - ?
 	- Converted relation graphs to use inline SVG
 	  - Relation graphs now use the color scheme of selected skin
 	  - VN relations are translatable in both the interface and the graphs
-		- Full date is displayed in graphs instead of only month/year
-	- Converted VN relations to an enum data type
+	  - Full date is displayed in graphs instead of only month/year
+	- Converted to ENUM data type:
+	  - vn_relations.relation
+	  - anime.type
 
 2.7 - 2009-09-24
 	- Improved styling of the threeboxes layout
